; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/ncftp/extr_getline.c_hist_next.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/ncftp/extr_getline.c_hist_next.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hist_pos = common dso_local global i32 0, align 4
@hist_last = common dso_local global i32 0, align 4
@HIST_SIZE = common dso_local global i32 0, align 4
@hist_buf = common dso_local global i8** null, align 8
@hist_empty_elem = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @hist_next to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @hist_next() #0 {
  %1 = alloca i8*, align 8
  store i8* null, i8** %1, align 8
  %2 = load i32, i32* @hist_pos, align 4
  %3 = load i32, i32* @hist_last, align 4
  %4 = icmp ne i32 %2, %3
  br i1 %4, label %5, label %15

5:                                                ; preds = %0
  %6 = load i32, i32* @hist_pos, align 4
  %7 = add nsw i32 %6, 1
  %8 = load i32, i32* @HIST_SIZE, align 4
  %9 = srem i32 %7, %8
  store i32 %9, i32* @hist_pos, align 4
  %10 = load i8**, i8*** @hist_buf, align 8
  %11 = load i32, i32* @hist_pos, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds i8*, i8** %10, i64 %12
  %14 = load i8*, i8** %13, align 8
  store i8* %14, i8** %1, align 8
  br label %15

15:                                               ; preds = %5, %0
  %16 = load i8*, i8** %1, align 8
  %17 = icmp eq i8* %16, null
  br i1 %17, label %18, label %21

18:                                               ; preds = %15
  %19 = load i8*, i8** @hist_empty_elem, align 8
  store i8* %19, i8** %1, align 8
  %20 = call i32 (...) @gl_beep()
  br label %21

21:                                               ; preds = %18, %15
  %22 = load i8*, i8** %1, align 8
  ret i8* %22
}

declare dso_local i32 @gl_beep(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
